--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,9 @@
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
     "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
-    "EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)"
+    "EM.InfeasibleGeneration = pyo.Var(EM.Year,EM.Hour,EM.Fuel, domain=pyo.NonNegativeReals)\n",
+    "EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
+    "#EM.TotalVariableCost = pyo.Var(EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)"
    ]
   },
   {
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +293,15 @@
     "    return (\n",
     "        sum(EM.FuelProductionByTechnology[y,h,t,f] / (1+EM.DiscountRate)**(y-min(EM.Year))\n",
     "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year) \n",
-    "            + sum(EM.NewCapacity[y,t] * EM.CapitalCost[t] / (1+EM.DiscountRate)**(y-min(EM.Year)) for y in EM.Year) == EM.TotalCost[t]\n",
+    "            + sum(EM.TotalCapitalCost[y,t] for y in EM.Year) == EM.TotalCost[t]\n",
     "    )\n",
+    "\n",
+    "def totalcapitalcostfunction(EM,y,t):\n",
+    "    return EM.NewCapacity[y,t] * EM.CapitalCost[t] / (1+EM.DiscountRate)**(y-min(EM.Year)) == EM.TotalCapitalCost[y,t]\n",
+    "\n",
+    "#def totalvariablecostfunction(EM,h,t):\n",
+    "    return sum(EM.FuelProductionByTechnology[y,h,t,f] / (1+EM.DiscountRate)**(y-min(EM.Year))\n",
+    "            * EM.VariableCost[t] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for y in EM.Year) == EM.TotalVariableCost[h,t]\n",
     "\n",
     "def productionfunction_dispatchable(EM,y,h,t,f):\n",
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
@@ -416,7 +425,7 @@
     "EM.MaxCapacityConstraint = pyo.Constraint(EM.Year,EM.Technology, rule=maxcapacityconstraint)\n",
     "EM.TotalCapacityAccounting = pyo.Constraint(EM.Year, EM.Technology, rule=totalcapacityaccounting)\n",
     "EM.CapacityUnitFunction = pyo.Constraint(EM.Year, EM.Technology, rule=capacityunitfunction)\n",
-    "#EM.TotalCapitalCostFunction = pyo.Constraint(EM.Technology, rule=totalcapitalcostfunction)\n",
+    "EM.TotalCapitalCostFunction = pyo.Constraint(EM.Year, EM.Technology, rule=totalcapitalcostfunction)\n",
     "#EM.TotalVariableCostFunction = pyo.Constraint(EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n",
     "\n",
     "#for storage\n",
@@ -450,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x4730651', 'Lower bound': 311590.27883581514, 'Upper bound': 311590.27883581514, 'Number of objectives': 1, 'Number of constraints': 4914602, 'Number of variables': 4730651, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 4730618, 'Number of nonzeros': 15089975, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1380.1959998607635', 'Error rc': 0, 'Time': 1416.4954342842102}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x4730684', 'Lower bound': 311590.27883581514, 'Upper bound': 311590.27883581514, 'Number of objectives': 1, 'Number of constraints': 4914635, 'Number of variables': 4730684, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 4730651, 'Number of nonzeros': 15090041, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1458.4930000305176', 'Error rc': 0, 'Time': 1496.160472393036}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,8 +538,142 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Technology</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>SolarPV</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>WindOnshore</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>HydroPower</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>DieselGenerator</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>Tidal</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>SolarPV</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>WindOnshore</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>HydroPower</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>DieselGenerator</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Tidal</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2040</td>\n",
+       "      <td>SolarPV</td>\n",
+       "      <td>135060.915779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2040</td>\n",
+       "      <td>WindOnshore</td>\n",
+       "      <td>153478.313385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2040</td>\n",
+       "      <td>HydroPower</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2040</td>\n",
+       "      <td>DieselGenerator</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2040</td>\n",
+       "      <td>Tidal</td>\n",
+       "      <td>153478.313385</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.0"
+       "    Year       Technology          Value\n",
+       "0   2030          SolarPV       0.000000\n",
+       "1   2030      WindOnshore       0.000000\n",
+       "2   2030       HydroPower       0.000000\n",
+       "3   2030  DieselGenerator       0.000000\n",
+       "4   2030            Tidal       0.000000\n",
+       "11  2035          SolarPV       0.000000\n",
+       "12  2035      WindOnshore       0.000000\n",
+       "13  2035       HydroPower       0.000000\n",
+       "14  2035  DieselGenerator       0.000000\n",
+       "15  2035            Tidal       0.000000\n",
+       "22  2040          SolarPV  135060.915779\n",
+       "23  2040      WindOnshore  153478.313385\n",
+       "24  2040       HydroPower       0.000000\n",
+       "25  2040  DieselGenerator       0.000000\n",
+       "26  2040            Tidal  153478.313385"
       ]
      },
      "execution_count": 18,
@@ -558,6 +701,11 @@
     "NewStorageEnergyCapacity['Type'] = 'NewCapacity'\n",
     "TotalStorageCapacity = pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Year','Storage','Fuel')), columns=['Value']).reset_index()\n",
     "TotalStorageCapacity['Type'] = 'TotalCapacity'\n",
+    "TotalCapitalCost = pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalCapitalCost.extract_values().keys(), names=('Year','Technology')), columns=['Value']).reset_index()\n",
+    "\n",
+    "#TotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour','Technology')), columns=['Value']).reset_index()\n",
+    "#TotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\n",
+    "#TotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\n",
     "\n",
     "#adding outputs for our storage flows\n",
     "StorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Year','Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\n",
@@ -603,42 +751,41 @@
     "data = instance.InfeasibleGeneration.extract_values()\n",
     "non_zero_values = {key: value for key, value in data.items() if value != 0.0}\n",
     "non_zero_values\n",
-    "sum(instance.InfeasibleGeneration.extract_values().values())\n"
+    "sum(instance.InfeasibleGeneration.extract_values().values())\n",
+    "#print(TotalCapitalCost)\n",
+    "#print(TotalVariableCost)\n",
+    "\n",
+    "technologies_list = ['SolarPV','WindOnshore','HydroPower','DieselGenerator','Tidal']\n",
+    "TotalCapitalCost = TotalCapitalCost[TotalCapitalCost['Technology'].isin(technologies_list)]\n",
+    "TotalCapitalCost\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(max(instance.InfeasibleGeneration.extract_values().values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "LastYearCapacity = NewCapacity[NewCapacity['Year']== 2040].iloc[:5,:]\n",
+    "LastYearCapacity = LastYearCapacity[(LastYearCapacity['Value'] != 0)]\n",
+    "InvestmentCost = pd.DataFrame(readin_investmentcost).iloc[:5,:]\n",
+    "LastYearInvestmentCost = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "#scrap yard\n",
